:bug: Fixed Animation in Dark Mode

--- a/final/css/main.css
+++ b/final/css/main.css
@@ -576,6 +576,12 @@ button:hover{
         100% {background-color: #ffffff00;}
     }
 
+    @keyframes info-background-fade{
+        0% {background-color: #ffffff00;}
+        10% {background-color: #0b0b0bed;}
+        100% {background-color: #0b0b0bed;}
+    }
+
     .paper-texture{
         background-image: url(../assets/black-paper.jpg);
         mix-blend-mode: screen;
